Mon, 14 May 2007 21:11:32 +0200 <thp@perli.net>
        * TODO: Updated TODO list

Mon,  7 May 2007 22:11:37 +0200 <thp@perli.net>
        * data/po/pt.po: Updated Portuguese translation by Joel Calado

Mon,  7 May 2007 21:06:20 +0200 <thp@perli.net>
        * data/gpodder.glade: Mark "download to label" placeholder string 
          as not translatable (thanks to Pieter De Decker for pointing
          that out)
        * data/messages.pot: Updated template from current source
        * data/po/nl.po: Updated Dutch translation (new prefs dialog, ..) 
          from Pieter De Decker (pdedecker gmail.com)
        * data/po/*.po: Refreshed from new source

Sun,  6 May 2007 17:24:49 +0200 <thp@perli.net>
        * src/gpodder/libwget.py: Add support for dynamic download queue 
          resizing; improve support for enabling/disabling download queue 
          while downloads are in progress
        * data/gpodder.glade: Remove info text "download queue changes need 
          a restart of gpodder", because it's not needed anymore - yay! :)
        * TODO: Dynamic Download Queue marked as done :)

Sun,  6 May 2007 15:56:37 +0200 <thp@perli.net>
        * data/gpodder.desktop: Added German and Russian translations to the 
          desktop entry file

Sun,  6 May 2007 14:41:37 +0200 <thp@perli.net>
        * src/gpodder/libopmlwriter.py: Write UTF-8 encoded files by default
        * src/gpodder/liblocdbwriter.py: Write UTF-8 encoded files by default
        * data/po/ru.po: Added Russian translation by Vladimir Zemlyakov
          (zemlyakov gmail.com)
        * setup.py: Added "ru" to list of languages to install
        * bin/gpodder: Pushed vers + rel.date

Sat,  5 May 2007 20:47:33 +0200 <thp@perli.net>
        * TODO: Updated TODO list (delete all episodes function)

Sat,  5 May 2007 10:06:58 +0200 <thp@perli.net>
        * data/gpodder.glade: Brand new, shiny preferences dialog with
          nice structuring, bold headings and icons